# chat

./: CMakeLists.txt  README  conanfile.txt
apps/: CMakeLists.txt
apps/client/: CMakeLists.txt  qt.qrc
apps/client/qml/: App.js  App.qml  MainView.qml  ServerChannelList.qml  ServerSelectionView.qml  ServerView.qml  Theme.qml
apps/client/src/: main.cpp
apps/devcmd/: CMakeLists.txt
apps/devcmd/src/: main.cpp
apps/server/: CMakeLists.txt
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/core/: core.hpp  export.hpp
libs/core/src/: core.cpp
libs/coreqt/: CMakeLists.txt
libs/coreqt/include/coreqt/: coreqt.hpp  export.hpp
libs/coreqt/src/: coreqt.cpp
